Made stuff compile on java 8.